arrange documents in root folder

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/partials/bio.scss">
 </head>
 <body>
     <div class="navbar">
@@ -12,7 +13,10 @@
                 <li>Biography</li>
                 <li>Shows</li>
             </ul>
+        </div>    
+        <div>
+            <img class="navbar-logo" src="assets/images/hero-bio.jpg">
         </div>
-        <img class="navbar-logo" src="assets/images/hero-bio.jpg"></div>
+    </div>    
 </body>
 </html>
