create basic page layout

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/partials/bio.scss">
+    <link rel="stylesheet" href="./styles/bio.css">
 </head>
 <body>
-    <div class="navbar">
+    <nav class="navbar">
+        <div class="navbar-logo__container"> <img class="navbar-logo" src="./assets/logo/Logo-bandsite.svg"> </div>
         <div class="navbar--options__cotainer">
             <ul>
                 <li>Biography</li>
@@ -15,8 +16,87 @@
             </ul>
         </div>    
         <div>
-            <img class="navbar-logo" src="assets/images/hero-bio.jpg">
+            <img class="navbar-hero" src="assets/images/hero-bio.jpg">
         </div>
-    </div>    
+    </nav> 
+    <section class="main">
+        <h2>about the musicians</h2>
+        <div class="main-container">
+            <img class="main-image-a" src="./assets/images/band.jpg">
+        </div>
+        <h2>photo gallery</h2>
+        <div class="main-image-b">
+            <img src="./assets/images/Photo-gallery-1.jpg">
+            <img src="./assets/images/Photo-gallery-2.jpg">
+            <img src="./assets/images/Photo-gallery-3.jpg">
+            <img src="./assets/images/Photo-gallery-4.jpg">
+            <img src="./assets/images/Photo-gallery-5.jpg">
+            <img src="./assets/images/Photo-gallery-6.jpg">
+            <img src="./assets/images/Photo-gallery-7.jpg">
+            <img src="./assets/images/Photo-gallery-8.jpg">
+            <img src="./assets/images/Photo-gallery-9.jpg">
+        </div>
+    </section>
+    <footer class="contact-info">
+        <h2 class="contact-info__title">get in touch</h2>
+        <div class="#"> 
+            <a href="#instagram"> <img src="./assets/icons/svg/Icon-instagram.svg"> </a>
+            <a href="#facebook"> <img src="./assets/icons/svg/Icon-facebook.svg"> </a>
+            <a href="#twitter"> <img src="./assets/icons/svg/Icon-twitter.svg"> </a>
+        </div>
+        <div class="#">
+            <ul>
+                <li><h2>Cam Adams</h2></li>
+                <li><h2>The Bees Knees Management</h2></li>
+            </ul>
+        </div>
+        <div class="#">
+            <ul>
+                <li>503 Broadway Penthouse,</li>
+                <li>New York, NY 10012, USA</li>
+            </ul>
+        </div>
+        <div class="#">
+            <ul>
+                <li>info@thebeesknees.com</li>
+            </ul>
+        </div>
+        <div class="#">
+            <ul>
+                <li><h2>Pearl Gregg</h2>
+                <li><h2>Limitless Artist Group</h2></li>
+            </ul>
+        </div>
+        <div class="#">
+            <ul>
+                <li>Booking Agent for
+
+                    USA / South America / Japan</li>
+            </ul>
+        </div>
+        <div class="#">
+            <ul>
+                <li>pearl.gregg@limitlessag.com</li>
+            </ul>
+        </div>
+        <div class="#">
+            <ul>
+                <li><h2>Carson Whyte</h2></li>
+                <li><h2>ARCH Entertainment</h2></li>
+            </ul>
+        </div>
+        <div class="#">
+            <ul>
+                <li>Booking Agent for
+                    UK / EU / AU</li>
+            </ul>
+        </div>
+        <div class="#">
+            <ul>
+                <li>cwhyte@archentertainment.com</li>
+            </ul>
+        </div>
+        <p>Copyright The Bees Knees © 2021 All Rights Reserved</p>
+    </footer>   
 </body>
 </html>
