--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/bio.css">
+    <link rel="stylesheet" href="./styles/partials/bio.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar-logo__container"> <img class="navbar-logo" src="./assets/logo/Logo-bandsite.svg"> </div>
-        <div class="navbar--options__cotainer">
-            <ul>
+        <div class="navbar-pages__cotainer">
+            <ul class="navbar-pages">
                 <li>Biography</li>
                 <li>Shows</li>
             </ul>
