make hero image responsive

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <li>Shows</li>
             </ul>
         </div>    
-        <div>
-            <img class="navbar-hero" src="assets/images/hero-bio.jpg">
-        </div>
     </nav> 
+    <div class="hero-image">
+       <p class="hero-image-text">the bees knees</p>
+    </div>
     <section class="main">
         <h2>about the musicians</h2>
         <div class="main-container">
