adjust footer info

--- a/index.html
+++ b/index.html
@@ -38,63 +38,37 @@
         </div>
     </section>
     <footer class="contact-info">
-        <h2 class="contact-info__title">get in touch</h2>
-        <div class="#"> 
+        <section>
+        <div class="#">
+            <h2 class="contact-info__title">get in touch</h2> 
             <a href="#instagram"> <img src="./assets/icons/svg/Icon-instagram.svg"> </a>
             <a href="#facebook"> <img src="./assets/icons/svg/Icon-facebook.svg"> </a>
             <a href="#twitter"> <img src="./assets/icons/svg/Icon-twitter.svg"> </a>
         </div>
+        </section>
         <div class="#">
-            <ul>
-                <li><h2>Cam Adams</h2></li>
-                <li><h2>The Bees Knees Management</h2></li>
-            </ul>
+            <p>Cam Adams</p>
+            <p>The Bees Knees Management</p>
+            <p>503 Broadway Penthouse,</p>
+            <p>New York, NY 10012, USA</p>
+            <p>info@thebeesknees.com</p>
         </div>
         <div class="#">
-            <ul>
-                <li>503 Broadway Penthouse,</li>
-                <li>New York, NY 10012, USA</li>
-            </ul>
+         <p>Pearl Gregg</p>
+         <p>Limitless Artist Group</p>
+         <p>Booking Agent for</p>
+         <p> US / South America / Japan</p>
+         <p>pearl.gregg@limitlessag.com</p>
         </div>
         <div class="#">
-            <ul>
-                <li>info@thebeesknees.com</li>
-            </ul>
+           <p>Carson Whyte</p>
+           <p>ARCH Entertainment</p>
+           <p>Booking Agent for</p>
+           <p>UK / EU / AU</p>
+           <p></p>
         </div>
         <div class="#">
-            <ul>
-                <li><h2>Pearl Gregg</h2>
-                <li><h2>Limitless Artist Group</h2></li>
-            </ul>
-        </div>
-        <div class="#">
-            <ul>
-                <li>Booking Agent for
-
-                    USA / South America / Japan</li>
-            </ul>
-        </div>
-        <div class="#">
-            <ul>
-                <li>pearl.gregg@limitlessag.com</li>
-            </ul>
-        </div>
-        <div class="#">
-            <ul>
-                <li><h2>Carson Whyte</h2></li>
-                <li><h2>ARCH Entertainment</h2></li>
-            </ul>
-        </div>
-        <div class="#">
-            <ul>
-                <li>Booking Agent for
-                    UK / EU / AU</li>
-            </ul>
-        </div>
-        <div class="#">
-            <ul>
-                <li>cwhyte@archentertainment.com</li>
-            </ul>
+        <p>cwhyte@archentertainment.com<p>
         </div>
         <p>Copyright The Bees Knees © 2021 All Rights Reserved</p>
     </footer>   
