work on photo gallery

--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
         <div class="main-container">
             <img class="main-image-a" src="./assets/images/band.jpg">
         </div>
-        <h2>photo gallery</h2>
-        <div class="main-image-b">
-            <img src="./assets/images/Photo-gallery-1.jpg">
-            <img src="./assets/images/Photo-gallery-2.jpg">
-            <img src="./assets/images/Photo-gallery-3.jpg">
-            <img src="./assets/images/Photo-gallery-4.jpg">
-            <img src="./assets/images/Photo-gallery-5.jpg">
-            <img src="./assets/images/Photo-gallery-6.jpg">
-            <img src="./assets/images/Photo-gallery-7.jpg">
-            <img src="./assets/images/Photo-gallery-8.jpg">
-            <img src="./assets/images/Photo-gallery-9.jpg">
+    </section>    
+        <div class="main-image__gallery">
+            <h2>photo gallery</h2>
+            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-1.jpg">
+            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-2.jpg">
+            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-3.jpg">
+            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-4.jpg">
+            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-5.jpg">
+            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-6.jpg">
+            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-7.jpg">
+            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-8.jpg">
+            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-9.jpg">
         </div>
     </section>
     <footer class="contact-info">
@@ -70,7 +71,10 @@
         <div class="#">
         <p>cwhyte@archentertainment.com<p>
         </div>
+        <div>
+            <img class="#" src="./assets/logo/Logo-bandsite.svg">
         <p>Copyright The Bees Knees © 2021 All Rights Reserved</p>
+        </div>
     </footer>   
 </body>
 </html>
