--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Bees Knees - Bio</title>
     <link rel="stylesheet" href="./styles/partials/bio.css">
 </head>
 <body>
@@ -16,23 +16,23 @@
             </ul>
         </div>    
     </nav> 
-    <div class="hero-image">
-       <p class="hero-image-text">the bees knees</p>
-    </div>
     <section class="main">
-        <h2>about the musicians</h2>
-        <div class="main-container">
-            <img class="main-image-a" src="./assets/images/band.jpg">
+        <div class="main-hero__image">
+            <p class="main-hero__image--text">THE BEES KNEES</p>
+         </div>
+        <div class="main__title"><h2>About the Musicians</h2></div>
+        <div class="main-bio__container">
+            <img class="main-bio__image" src="./assets/images/band.jpg">
             <div class="main-text-container">
-            <p class="main-text-container__info">
-            <p>“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
-             <p>- Bryan Teddy, lead vocalist of The Bees Knees</p>
+            <p class="main-text-container__info">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
+            <p class="main-text-container__info">- Bryan Teddy, lead vocalist of The Bees Knees</p>
             <p class="main-text-container__info">The Bees Knees</p>
             <p class="main-text-container__info">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the band could succeed even further, pushing them to sign with Magenta Records.</p>
             <p class="main-text-container__info">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released in late 2021.</p>
             </div> 
         </div>
-    </section>    
+    </section> 
+    <section> 
         <div class="main-image__gallery">
             <h2>photo gallery</h2>
             <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-1.jpg">
@@ -46,15 +46,13 @@
             <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-9.jpg">
         </div>
     </section>
-    <footer class="contact-info">
-        <section>
+    <section class="contact-info">
         <div class="#">
             <h2 class="contact-info__title">get in touch</h2> 
             <a href="#instagram"> <img src="./assets/icons/svg/Icon-instagram.svg"> </a>
             <a href="#facebook"> <img src="./assets/icons/svg/Icon-facebook.svg"> </a>
             <a href="#twitter"> <img src="./assets/icons/svg/Icon-twitter.svg"> </a>
         </div>
-        </section>
         <div class="#">
             <p>Cam Adams</p>
             <p>The Bees Knees Management</p>
@@ -74,15 +72,14 @@
            <p>ARCH Entertainment</p>
            <p>Booking Agent for</p>
            <p>UK / EU / AU</p>
-           <p></p>
+           <p>cwhyte@archentertainment.com</p>
         </div>
-        <div class="#">
-        <p>cwhyte@archentertainment.com<p>
-        </div>
-        <div>
-            <img class="#" src="./assets/logo/Logo-bandsite.svg">
+    </section> 
+    <footer class="additional-info">
+        <div class="additional-info">
+            <img src="./assets/logo/Logo-bandsite.svg">
         <p>Copyright The Bees Knees © 2021 All Rights Reserved</p>
         </div>
-    </footer>   
+    </footer>  
 </body>
 </html>
