--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Bees Knees - Bio</title>
-    <link rel="stylesheet" href="./styles/partials/bio.css">
+    <link rel="stylesheet" href="./styles/bio.css">
 </head>
 <body>
     <nav class="navbar">
