--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <div class="main-text-container">
             <p class="main-text-container__info">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
             <p class="main-text-container__info">- Bryan Teddy, lead vocalist of The Bees Knees</p>
-        <div class="main-text-container">
+        <div class="main-text-container-b">
             <div class="main-text-container__b">
             <p class="main-text-container__info--b">The Bees Knees</p>
             <p class="main-text-container__info--b">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the band could succeed even further, pushing them to sign with Magenta Records.</p>
