continue to work on the footer and bio info spacing before you lose it

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
      </div>   
     </div>
     </section> 
-    <section>
-        <h2 class="main-gallery__info">Photo Gallery</h2> 
-        <div class="main-image__gallery">
+    <section class="gallery">
+        <h2 class="gallery-images">Photo Gallery</h2> 
+        <div class="gallery-images__container">
             <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-1.jpg">
             <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-2.jpg">
             <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-3.jpg">
@@ -53,11 +53,11 @@
         </div>
     </section>
     <section class="contact-info">
-        <div class="#">
+        <div class="contact-info__container">
             <h2 class="contact-info__title">get in touch</h2> 
-            <a href="#instagram"> <img src="./assets/icons/svg/Icon-instagram.svg"> </a>
-            <a href="#facebook"> <img src="./assets/icons/svg/Icon-facebook.svg"> </a>
-            <a href="#twitter"> <img src="./assets/icons/svg/Icon-twitter.svg"> </a>
+            <a class="contact-info__title-a" href="https://www.instagram.com/"> <img src="./assets/icons/svg/Icon-instagram.svg"> </a>
+            <a class="contact-info__title-b" href="https://www.facebook.com/"> <img src="./assets/icons/svg/Icon-facebook.svg"> </a>
+            <a class="contact-info__title-c" href="https://twitter.com/"> <img src="./assets/icons/svg/Icon-twitter.svg"> </a>
         </div>
         <div class="#">
             <p>Cam Adams</p>
