make footer adjustments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          </div>
         <div class="main__title"><h2>About the Musicians</h2></div>
     <div class="main-bio__container">
-            <img class="main-bio__image" src="./assets/images/band.jpg">
+           <div> <img class="main-bio__image" src="./assets/images/band.jpg"> </div>
      <div class="main-text-container">
             <p class="main-text-container__info">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
             <p class="main-text-container__info">- Bryan Teddy, lead vocalist of The Bees Knees</p>
@@ -53,32 +53,34 @@
         </div>
     </section>
     <section class="contact-info">
+        <h2 class="contact-info__title">Get in Touch</h2> 
         <div class="contact-info__container">
-            <h2 class="contact-info__title">get in touch</h2> 
-            <a class="contact-info__title-a" href="https://www.instagram.com/"> <img src="./assets/icons/svg/Icon-instagram.svg"> </a>
-            <a class="contact-info__title-b" href="https://www.facebook.com/"> <img src="./assets/icons/svg/Icon-facebook.svg"> </a>
-            <a class="contact-info__title-c" href="https://twitter.com/"> <img src="./assets/icons/svg/Icon-twitter.svg"> </a>
+            <div class="contact-info__title-a"> <a href="https://www.instagram.com/"> <img src="./assets/icons/svg/Icon-instagram.svg"></a></div>
+            <div class="contact-info__title-b"> <a href="https://www.facebook.com/"> <img src="./assets/icons/svg/Icon-facebook.svg"></a></div>
+            <div class="contact-info__title-c"> <a href="https://twitter.com/"> <img src="./assets/icons/svg/Icon-twitter.svg"></a></div>
         </div>
-        <div class="#">
-            <p>Cam Adams</p>
-            <p>The Bees Knees Management</p>
-            <p>503 Broadway Penthouse,</p>
-            <p>New York, NY 10012, USA</p>
-            <p>info@thebeesknees.com</p>
-        </div>
-        <div class="#">
-         <p>Pearl Gregg</p>
-         <p>Limitless Artist Group</p>
-         <p>Booking Agent for</p>
-         <p> US / South America / Japan</p>
-         <p>pearl.gregg@limitlessag.com</p>
-        </div>
-        <div class="#">
-           <p>Carson Whyte</p>
-           <p>ARCH Entertainment</p>
-           <p>Booking Agent for</p>
-           <p>UK / EU / AU</p>
-           <p>cwhyte@archentertainment.com</p>
+        <div class="contact-info__contacts">
+            <div class="contact-info__contact">
+                <h4>Cam Adams</h4>
+                <h4>The Bees Knees Management</h4>
+                <p>503 Broadway Penthouse,</p>
+                <p>New York, NY 10012, USA</p>
+                <p>info@thebeesknees.com</p>
+            </div>
+            <div class="contact-info__contact">
+                <h4>Pearl Gregg</h4>
+                <h4>Limitless Artist Group</h4>
+                <p>Booking Agent for</p>
+                <p>US / South America / Japan</p>
+                <p>pearl.gregg@limitlessag.com</p>
+            </div>
+            <div class="contact-info__contact">
+                <h4>Carson Whyte</h4>
+                <h4>ARCH Entertainment</h4>
+                <p>Booking Agent for</p>
+                <p>UK / EU / AU</p>
+                <p>cwhyte@archentertainment.com</p>
+            </div>
         </div>
     </section> 
     <footer class="additional-info">
