make more adjustments to footer

--- a/index.html
+++ b/index.html
@@ -62,31 +62,31 @@
         <div class="contact-info__contacts">
             <div class="contact-info__contact">
                 <h4>Cam Adams</h4>
-                <h4>The Bees Knees Management</h4>
+                <h4 class="contact-info__contact--mod">The Bees Knees Management</h4>
                 <p>503 Broadway Penthouse,</p>
-                <p>New York, NY 10012, USA</p>
-                <p>info@thebeesknees.com</p>
+                <p class="contact-info__contact--mod">New York, NY 10012, USA</p>
+                <p class="contact-info__contact--mod2">info@thebeesknees.com</p>
             </div>
             <div class="contact-info__contact">
                 <h4>Pearl Gregg</h4>
-                <h4>Limitless Artist Group</h4>
+                <h4 class="contact-info__contact--mod">Limitless Artist Group</h4>
                 <p>Booking Agent for</p>
-                <p>US / South America / Japan</p>
-                <p>pearl.gregg@limitlessag.com</p>
+                <p class="contact-info__contact--mod">US / South America / Japan</p>
+                <p class="contact-info__contact--mod2">pearl.gregg@limitlessag.com</p>
             </div>
             <div class="contact-info__contact">
                 <h4>Carson Whyte</h4>
-                <h4>ARCH Entertainment</h4>
+                <h4 class="contact-info__contact--mod">ARCH Entertainment</h4>
                 <p>Booking Agent for</p>
-                <p>UK / EU / AU</p>
-                <p>cwhyte@archentertainment.com</p>
+                <p class="contact-info__contact--mod">UK / EU / AU</p>
+                <p class="contact-info__contact--mod3">cwhyte@archentertainment.com</p>
             </div>
         </div>
     </section> 
     <footer class="additional-info">
         <div class="additional-info">
-            <img src="./assets/logo/Logo-bandsite.svg">
-        <p>Copyright The Bees Knees © 2021 All Rights Reserved</p>
+            <img class="additional-info__image" src="./assets/logo/Logo-bandsite.svg">
+        <p class="additional-info--mod">Copyright The Bees Knees © 2021 All Rights Reserved</p>
         </div>
     </footer>  
 </body>
