--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
            <div> <img class="main-bio__image" src="./assets/images/band.jpg"> </div>
      <div class="main-text-container">
             <p class="main-text-container__info">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
-            <p class="main-text-container__info">- Bryan Teddy, lead vocalist of The Bees Knees</p>
+            <p class="main-text-container__info--a">- Bryan Teddy, lead vocalist of The Bees Knees</p>
         <div class="main-text-container-b">
             <div class="main-text-container__b">
-            <p class="main-text-container__info--b">The Bees Knees</p>
+            <p class="main-text-container__info--b, main-text-container__info--bb">The Bees Knees</p>
             <p class="main-text-container__info--b">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the band could succeed even further, pushing them to sign with Magenta Records.</p>
             </div>
             <div class="main-text-container__b">
@@ -53,7 +53,7 @@
         </div>
     </section>
     <section class="contact-info">
-        <h2 class="contact-info__title">Get in Touch</h2> 
+        <p class="contact-info__title">Get in Touch</p> 
         <div class="contact-info__container">
             <div class="contact-info__title-a"> <a href="https://www.instagram.com/"> <img src="./assets/icons/svg/Icon-instagram.svg"></a></div>
             <div class="contact-info__title-b"> <a href="https://www.facebook.com/"> <img src="./assets/icons/svg/Icon-facebook.svg"></a></div>
@@ -61,22 +61,22 @@
         </div>
         <div class="contact-info__contacts">
             <div class="contact-info__contact">
-                <h4>Cam Adams</h4>
-                <h4 class="contact-info__contact--mod">The Bees Knees Management</h4>
+                <p>Cam Adams</p>
+                <p class="contact-info__contact--mod">The Bees Knees Management</p>
                 <p>503 Broadway Penthouse,</p>
                 <p class="contact-info__contact--mod">New York, NY 10012, USA</p>
                 <p class="contact-info__contact--mod2">info@thebeesknees.com</p>
             </div>
             <div class="contact-info__contact">
-                <h4>Pearl Gregg</h4>
-                <h4 class="contact-info__contact--mod">Limitless Artist Group</h4>
+                <p>Pearl Gregg</p>
+                <p class="contact-info__contact--mod">Limitless Artist Group</p>
                 <p>Booking Agent for</p>
                 <p class="contact-info__contact--mod">US / South America / Japan</p>
                 <p class="contact-info__contact--mod2">pearl.gregg@limitlessag.com</p>
             </div>
             <div class="contact-info__contact">
-                <h4>Carson Whyte</h4>
-                <h4 class="contact-info__contact--mod">ARCH Entertainment</h4>
+                <p>Carson Whyte</p>
+                <p class="contact-info__contact--mod">ARCH Entertainment</p>
                 <p>Booking Agent for</p>
                 <p class="contact-info__contact--mod">UK / EU / AU</p>
                 <p class="contact-info__contact--mod3">cwhyte@archentertainment.com</p>
