continue tablet view adjustments

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="main-hero__image">
             <p class="main-hero__image--text">THE BEES KNEES</p>
          </div>
-        <div class="main__title"><h2>About the Musicians</h2></div>
+        <div class="main__title"><p class="main__title--mod">About the Musicians</p></div>
     <div class="main-bio__container">
            <div> <img class="main-bio__image" src="./assets/images/band.jpg"> </div>
      <div class="main-text-container">
@@ -39,7 +39,7 @@
     </div>
     </section> 
     <section class="gallery">
-        <h2 class="gallery-images">Photo Gallery</h2> 
+        <p class="gallery-images">Photo Gallery</p> 
         <div class="gallery-images__container">
             <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-1.jpg">
             <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-2.jpg">
@@ -61,22 +61,22 @@
         </div>
         <div class="contact-info__contacts">
             <div class="contact-info__contact">
-                <p>Cam Adams</p>
-                <p class="contact-info__contact--mod">The Bees Knees Management</p>
+                <p class="contact-info__contact--mod4">Cam Adams</p>
+                <p class="contact-info__contact--mod contact-info__contact--mod4">The Bees Knees Management</p>
                 <p>503 Broadway Penthouse,</p>
                 <p class="contact-info__contact--mod">New York, NY 10012, USA</p>
                 <p class="contact-info__contact--mod2">info@thebeesknees.com</p>
             </div>
             <div class="contact-info__contact">
-                <p>Pearl Gregg</p>
-                <p class="contact-info__contact--mod">Limitless Artist Group</p>
+                <p class="contact-info__contact--mod4">Pearl Gregg</p>
+                <p class="contact-info__contact--mod contact-info__contact--mod4">Limitless Artist Group</p>
                 <p>Booking Agent for</p>
                 <p class="contact-info__contact--mod">US / South America / Japan</p>
                 <p class="contact-info__contact--mod2">pearl.gregg@limitlessag.com</p>
             </div>
             <div class="contact-info__contact">
-                <p>Carson Whyte</p>
-                <p class="contact-info__contact--mod">ARCH Entertainment</p>
+                <p class="contact-info__contact--mod4">Carson Whyte</p>
+                <p class="contact-info__contact--mod contact-info__contact--mod4">ARCH Entertainment</p>
                 <p>Booking Agent for</p>
                 <p class="contact-info__contact--mod">UK / EU / AU</p>
                 <p class="contact-info__contact--mod3">cwhyte@archentertainment.com</p>
