finish tablet view

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="main-text-container-b">
             <div class="main-text-container__b">
             <p class="main-text-container__info--b, main-text-container__info--bb">The Bees Knees</p>
-            <p class="main-text-container__info--b">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the band could succeed even further, pushing them to sign with Magenta Records.</p>
+            <div class="main-text-container__info--aa"><p class="main-text-container__info--b">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the band could succeed even further, pushing them to sign with Magenta Records.</p></div>
             </div>
             <div class="main-text-container__b">
-            <p class="main-text-container__info--b">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released in late 2021.</p>
+            <div class="main-text-container__info--aa"><p class="main-text-container__info--b">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released in late 2021.</p></div>
             </div> 
         </div> 
      </div>   
@@ -41,14 +41,14 @@
     <section class="gallery">
         <p class="gallery-images">Photo Gallery</p> 
         <div class="gallery-images__container">
-            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-1.jpg">
-            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-2.jpg">
+            <img class="main-image__gallery--item main-image__gallery--item1" src="./assets/images/Photo-gallery-1.jpg">
+            <img class="main-image__gallery--item main-image__gallery--item2" src="./assets/images/Photo-gallery-2.jpg">
             <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-3.jpg">
-            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-4.jpg">
-            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-5.jpg">
+            <img class="main-image__gallery--item main-image__gallery--item1" src="./assets/images/Photo-gallery-4.jpg">
+            <img class="main-image__gallery--item main-image__gallery--item2" src="./assets/images/Photo-gallery-5.jpg">
             <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-6.jpg">
-            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-7.jpg">
-            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-8.jpg">
+            <img class="main-image__gallery--item main-image__gallery--item1" src="./assets/images/Photo-gallery-7.jpg">
+            <img class="main-image__gallery--item main-image__gallery--item2" src="./assets/images/Photo-gallery-8.jpg">
             <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-9.jpg">
         </div>
     </section>
