make desktop adjustments

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="navbar-logo__container"><a href="./index.html"><img class="navbar-logo" src="./assets/logo/Logo-bandsite.svg"></a></div>
         <div class="navbar-pages__cotainer">
             <ul class="navbar-pages">
-                <li>Biography</li>
-                <li>Shows</li>
+                <li><a href="#">Biography</a></li>
+                <li><a href="#">Shows</a></li>
             </ul>
         </div>    
     </nav> 
@@ -41,15 +41,15 @@
     <section class="gallery">
         <p class="gallery-images">Photo Gallery</p> 
         <div class="gallery-images__container">
-            <img class="main-image__gallery--item main-image__gallery--item1" src="./assets/images/Photo-gallery-1.jpg">
-            <img class="main-image__gallery--item main-image__gallery--item2" src="./assets/images/Photo-gallery-2.jpg">
-            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-3.jpg">
-            <img class="main-image__gallery--item main-image__gallery--item1" src="./assets/images/Photo-gallery-4.jpg">
-            <img class="main-image__gallery--item main-image__gallery--item2" src="./assets/images/Photo-gallery-5.jpg">
-            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-6.jpg">
-            <img class="main-image__gallery--item main-image__gallery--item1" src="./assets/images/Photo-gallery-7.jpg">
-            <img class="main-image__gallery--item main-image__gallery--item2" src="./assets/images/Photo-gallery-8.jpg">
-            <img class="main-image__gallery--item" src="./assets/images/Photo-gallery-9.jpg">
+            <img class="gallery-image__item gallery-image__item--mod1" src="./assets/images/Photo-gallery-1.jpg">
+            <img class="gallery-image__item gallery-image__item--mod2" src="./assets/images/Photo-gallery-2.jpg">
+            <img class="gallery-image__item" src="./assets/images/Photo-gallery-3.jpg">
+            <img class="gallery-image__item gallery-image__item--mod1" src="./assets/images/Photo-gallery-4.jpg">
+            <img class="gallery-image__item gallery-image__item--mod2" src="./assets/images/Photo-gallery-5.jpg">
+            <img class="gallery-image__item" src="./assets/images/Photo-gallery-6.jpg">
+            <img class="gallery-image__item gallery-image__item--mod1" src="./assets/images/Photo-gallery-7.jpg">
+            <img class="gallery-image__item gallery-image__item--mod2" src="./assets/images/Photo-gallery-8.jpg">
+            <img class="gallery-image__item" src="./assets/images/Photo-gallery-9.jpg">
         </div>
     </section>
     <section class="contact-info">
