just about finished

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <div class="navbar-logo__container"><a href="./index.html"><img class="navbar-logo" src="./assets/logo/Logo-bandsite.svg"></a></div>
         <div class="navbar-pages__cotainer">
             <ul class="navbar-pages">
-                <li><a href="#">Biography</a></li>
+                <li><a href="./index.html">Biography</a></li>
                 <li><a href="#">Shows</a></li>
             </ul>
         </div>    
     </nav> 
     <section class="main">
         <div class="main-hero__image">
-            <p class="main-hero__image--text">THE BEES KNEES</p>
+            <p class="main-hero__image--text">The Bees Knees</p>
          </div>
         <div class="main__title"><p class="main__title--mod">About the Musicians</p></div>
     <div class="main-bio__container">
@@ -57,6 +57,7 @@
             <div class="contact-info__title-a"> <a href="https://www.instagram.com/"> <img src="./assets/icons/svg/Icon-instagram.svg"></a></div>
             <div class="contact-info__title-b"> <a href="https://www.facebook.com/"> <img src="./assets/icons/svg/Icon-facebook.svg"></a></div>
             <div class="contact-info__title-c"> <a href="https://twitter.com/"> <img src="./assets/icons/svg/Icon-twitter.svg"></a></div>
+            <div class="contact-info__logo"><img src="./assets/logo/Logo-bandsite.svg"></div>
         </div>
         <div class="contact-info__contacts">
             <div class="contact-info__contact">
@@ -83,8 +84,7 @@
         </div>
     </section> 
     <footer class="additional-info">
-        <div class="additional-info">
-            <img class="additional-info__image" src="./assets/logo/Logo-bandsite.svg">
+        <div class="additional-info__container">
         <p class="additional-info--mod">Copyright The Bees Knees © 2021 All Rights Reserved</p>
         </div>
     </footer>  
