create html for show page

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             <img class="gallery-image__item" src="./assets/images/Photo-gallery-9.jpg">
         </div>
     </section>
+
+    <section class="comment">
+
+    </section>
+
     <section class="contact-info">
         <p class="contact-info__title">Get in Touch</p> 
         <div class="contact-info__container">
