create scss for show page

--- a/shows.html
+++ b/shows.html
@@ -11,17 +11,22 @@
         <div class="navbar-pages__cotainer">
             <ul class="navbar-pages">
                 <li><a href="./index.html">Biography</a></li>
-                <li><a href="#">Shows</a></li>
+                <li><a href="./shows.html">Shows</a></li>
             </ul>
         </div>    
     </nav>
+
     <section class="shows">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <div class="shows__container">
+        <p class="shows__header">Shows</p>
+        <div class="shows__container--item"></div>
+        <div class="shows__container--item"></div>
+        <div class="shows__container--item"></div>
+        <div class="shows__container--item"></div>
+        <div class="shows__container--item"></div>
+        <div class="shows__container--item"></div>
+    </div>
+        
     </section>
     <section class="contact-info">
         <p class="contact-info__title">Get in Touch</p> 
