--- a/index.html
+++ b/index.html
@@ -53,7 +53,27 @@
     </section>
 
     <section class="comment">
-
+        <div class="comment__section">
+            <h2>Join the Conversation</h2>
+            <div class="comment__section--container">
+                <img class="comment__section--image" src="./assets/images/Mohan-muruge.jpg">
+            <form id="commentForm">
+            <div class="comment__section--input">
+                <h5>NAME</h5>
+                <label class="#" for="name"></label>
+                <input class="#" type="text" name="name" id="name" placeholder="Enter your name"/>
+                <br />
+            </div>
+            <div class="comment__section--input">
+                <h5>COMMENT</h5>
+                <label class="#" for="comment"></label>
+                <input class="#" type="comment" name="comment" id="comment" placeholder="Add a new comment"/>
+                <br />
+                <button>Submit</button>
+            </div>    
+            </form>    
+            </div>    
+        </div>
     </section>
 
     <section class="contact-info">
