--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
             <div class="comment__section--container">
                 <img class="comment__section--image" src="./assets/images/Mohan-muruge.jpg">
             <form id="commentForm">
-            <div class="comment__section--input">
-                <h5>NAME</h5>
+            <div class="comment__section--input1">
+                <h5 class="comment__section--text">NAME</h5>
                 <label class="#" for="name"></label>
                 <input class="#" type="text" name="name" id="name" placeholder="Enter your name"/>
                 <br />
             </div>
-            <div class="comment__section--input">
-                <h5>COMMENT</h5>
+            <div class="comment__section--input2">
+                <h5 class="comment__section--text">COMMENT</h5>
                 <label class="#" for="comment"></label>
-                <input class="#" type="comment" name="comment" id="comment" placeholder="Add a new comment"/>
+                <input type="comment" name="comment" id="comment" placeholder="Add a new comment"/>
                 <br />
-                <button>Submit</button>
+                <button>COMMENT</button>
             </div>    
             </form>    
             </div>    
