--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
 
     <section class="comment">
         <div class="comment__section">
-            <h2>Join the Conversation</h2>
+            <h2 class="comment__section--text">Join the Conversation</h2>
             <div class="comment__section--container">
                 <img class="comment__section--image" src="./assets/images/Mohan-muruge.jpg">
             <form id="commentForm">
             <div class="comment__section--input1">
-                <h5 class="comment__section--text">NAME</h5>
+                <h5 class="comment__section--text1">NAME</h5>
                 <label class="#" for="name"></label>
                 <input class="#" type="text" name="name" id="name" placeholder="Enter your name"/>
                 <br />
             </div>
             <div class="comment__section--input2">
-                <h5 class="comment__section--text">COMMENT</h5>
+                <h5 class="comment__section--text1">COMMENT</h5>
                 <label class="#" for="comment"></label>
                 <input type="comment" name="comment" id="comment" placeholder="Add a new comment"/>
                 <br />
-                <button>COMMENT</button>
+                <button>           COMMENT</button>
             </div>    
             </form>    
             </div>    
