add shows header img to folder from starter code

--- a/shows.html
+++ b/shows.html
@@ -18,6 +18,9 @@
     </nav>
 
     <section class="shows">
+        <div class="shows-header__image">
+            <p>TEXT FOR HEADER</p>
+        </div>
     <div class="shows__container">
         <p class="shows__header">Shows</p>
         <div class="shows__container--item"></div>
