adjust per feedback

--- a/shows.html
+++ b/shows.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Bees Knees - Shows</title>
     <link rel="stylesheet" href="./styles/shows.css">
 </head>
 <body>
@@ -19,7 +19,8 @@
 
     <section class="shows">
         <div class="shows-header__image">
-            <p>TEXT FOR HEADER</p>
+            <p class="shows-header__image--subText">Beautiful Beasts Album</p>
+            <p class="shows-header__image--text">TEXT FOR HEADER</p>
         </div>
     <div class="shows__container">
         <p class="shows__header">Shows</p>
