--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="navbar-pages__cotainer">
             <ul class="navbar-pages">
                 <li><a href="./index.html">Biography</a></li>
-                <li><a href="#">Shows</a></li>
+                <li><a href="./shows.html">Shows</a></li>
             </ul>
         </div>    
     </nav> 
@@ -75,8 +75,8 @@
             </div>    
         </div>
     </section>
-
-    <section class="contact-info">
+    <footer class="additional-info">
+     <section class="contact-info">
         <p class="contact-info__title">Get in Touch</p> 
         <div class="contact-info__container">
             <div class="contact-info__title-a"> <a href="https://www.instagram.com/"> <img src="./assets/icons/svg/Icon-instagram.svg"></a></div>
@@ -107,8 +107,7 @@
                 <p class="contact-info__contact--mod3">cwhyte@archentertainment.com</p>
             </div>
         </div>
-    </section> 
-    <footer class="additional-info">
+     </section> 
         <div class="additional-info__container">
         <p class="additional-info--mod">Copyright The Bees Knees © 2021 All Rights Reserved</p>
         </div>
