--- a/index.html
+++ b/index.html
@@ -66,13 +66,15 @@
             </div>
             <div class="comment__section--input2">
                 <h5 class="comment__section--text1">COMMENT</h5>
-                <label class="#" for="comment"></label>
+                <label class="comment" for="comment"></label>
                 <input type="comment" name="comment" id="comment" placeholder="Add a new comment"/>
                 <br />
-                <button>           COMMENT</button>
-            </div>    
-            </form>    
-            </div>    
+                <button>COMMENT</button>
+            </div>  
+            <div id="comments"></div>   
+            </form> 
+             
+            </div>  
         </div>
     </section>
     <footer class="additional-info">
@@ -111,6 +113,7 @@
         <div class="additional-info__container">
         <p class="additional-info--mod">Copyright The Bees Knees © 2021 All Rights Reserved</p>
         </div>
-    </footer>  
+    </footer>
+    <script rel="stylesheet" src="./scripty.js"></script> 
 </body>
 </html>
