make adjustments throughout bio page

--- a/shows.html
+++ b/shows.html
@@ -20,7 +20,7 @@
     <section class="shows">
         <div class="shows-header__image">
             <p class="shows-header__image--subText">Beautiful Beasts Album</p>
-            <p class="shows-header__image--text">TEXT FOR HEADER</p>
+            <p class="shows-header__image--text">Queen of Yellow x For The Strings</p>
         </div>
     <div class="shows__container">
         <p class="shows__header">Shows</p>
