--- a/index.html
+++ b/index.html
@@ -57,23 +57,22 @@
             <h2 class="comment__section--text">Join the Conversation</h2>
             <div class="comment__section--container">
                 <img class="comment__section--image" src="./assets/images/Mohan-muruge.jpg">
-            <form id="commentForm">
-            <div class="comment__section--input1">
-                <h5 class="comment__section--text1">NAME</h5>
-                <label class="#" for="name"></label>
-                <input class="#" type="text" name="name" id="name" placeholder="Enter your name"/>
-                <br />
-            </div>
-            <div class="comment__section--input2">
-                <h5 class="comment__section--text1">COMMENT</h5>
-                <label class="comment" for="comment"></label>
-                <input type="comment" name="comment" id="comment" placeholder="Add a new comment"/>
-                <br />
-                <button>COMMENT</button>
-            </div>  
-            <div id="comments"></div>   
-            </form> 
-             
+               <form id="commentForm">
+                    <div class="comment__section--input1">
+                     <h5 class="comment__section--text1">NAME</h5>
+                     <label class="#" for="name"></label>
+                     <input class="#" type="text" name="name" id="name" placeholder="Enter your name"/>
+                     <br />
+                    </div>
+                    <div class="comment__section--input2">
+                     <h5 class="comment__section--text1">COMMENT</h5>
+                     <label class="comment" for="comment"></label>
+                     <input type="comment" name="comment" id="comment" placeholder="Add a new comment"/>
+                     <br />
+                     <button>COMMENT</button>
+                    </div>  
+                   <div id="comments"></div>   
+                </form> 
             </div>  
         </div>
     </section>
@@ -111,6 +110,7 @@
         </div>
      </section> 
         <div class="additional-info__container">
+            <div class="contact-info__logo2"><img src="./assets/logo/Logo-bandsite.svg"></div>
         <p class="additional-info--mod">Copyright The Bees Knees © 2021 All Rights Reserved</p>
         </div>
     </footer>
