comment section finalizations

--- a/index.html
+++ b/index.html
@@ -71,7 +71,18 @@
                      <br />
                      <button>COMMENT</button>
                     </div>  
-                   <div id="comments"></div>   
+                   <div id="comments">
+                     <div class="comments__info">
+                       <div class="comments__avi"></div>
+                       <div class="comments__details">
+                         <div class="comments__data">
+                            <p class="comments__data-info">name</p>
+                            <p class="comments__data-info2">timestamp</p>
+                         </div>
+                         <p class="comments__data-info3">comment</p>
+                       </div>
+                     </div>
+                   </div>   
                 </form> 
             </div>  
         </div>
